--- a/css/styles.css
+++ b/css/styles.css
@@ -7,10 +7,10 @@
   --color-win: #78CF82;
   --color-lose: #D94545;
   --color-start: #5b85b7;
-  --color-neutral: #445069;
-  --color-neutral-light: #D2D2D2;
-  --color-keys: #37474F;
-  --color-keys-light: #E5E5E5;
+  --color-neutral: skyblue;
+  --color-neutral-light: #E5E5E5;
+  --color-keys: #7a7a85;
+  --color-keys-light: #e7e7e77a;
   --font-size-large: 60px;
   --font-size-medium: 20px;
   --transition: all .2s ease-in-out;
@@ -93,8 +93,8 @@ button {
 }
 
 .show {
-  color: #000;
-  background-color: #76CE82;
+  color: white;
+  background-color: skyblue;
 }
 
 /* Keyboard */
@@ -111,6 +111,10 @@ button {
   color: #FFFFFF;
 }
 
+.chosen_mistaken {
+  background-color: var(--color-lose);
+}
+
 .btn__reset {
   padding: 8px;
   margin: 50px auto;
@@ -124,7 +128,7 @@ button {
 }
 
 .btn:hover {
-  color: coral;
+  color: #393939;
 }
 
 /* Overlay */
